logic/src/parse/snapshots/logic__parse__ui__invalid_operator.snap
---
source: logic/src/parse/ui.rs
assertion_line: 34
expression: "ui_test(\"(a b c)\".to_string())"

---
error: Your program contains a syntax error!
  ┌─ file:1:4
  │
1 │ (a b c)
  │    ^ Expected an operator here. Instead we found `b`.


